# GameOfLife

./: CMakeLists.txt  license.txt
include/GameOfLife/: Cell.h  GameOfLife.h  Version.h
src/: Cell.cpp  GameOfLife.cpp
test/: Cell.t.cpp  GameOfLife.t.cpp
